--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   getwidget: ^4.0.0
   shared_preferences: ^2.2.3
   shimmer: ^3.0.0
+  lottie: ^3.1.0
 
 dev_dependencies:
   flutter_test:
