--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   shared_preferences: ^2.2.3
   shimmer: ^3.0.0
   lottie: ^3.1.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
